fix(answer): make chosen answer more visible

--- a/web/src/components/Answer/Answer.module.css
+++ b/web/src/components/Answer/Answer.module.css
@@ -20,7 +20,7 @@
 }
 
 .answer.selected {
-    border-width: 2px;
+    border-width: 3px;
 }
 
 .letter {
